[package]
name = "bls-elgamal"
version = "0.2.0"
authors = ["AlvinHon <alvin.cpp@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/AlvinHon/bls-elgamal"
description = "Implement ElGamal encryption with BLS12-381 G1 curve."


[lib]
name = "bls_elgamal"
path = "src/lib.rs"

[dependencies]
ark-bls12-381 = { version = "0.5" }
ark-ec = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", features = ["derive"] }
ark-std = { version = "0.5", default-features = false }
bincode = "1"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rand = "0.8"
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false